--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
+    "@svgr/webpack": "^6.3.1",
     "@tanstack/react-query": "^4.3.9",
     "@trpc/client": "10.0.0-proxy-beta.2",
     "@trpc/next": "10.0.0-proxy-beta.2",
     "@trpc/react": "10.0.0-proxy-beta.2",
     "@trpc/server": "10.0.0-proxy-beta.2",
+    "clsx": "^1.2.1",
+    "hamburger-react": "^2.5.0",
     "next": "12.3.1",
     "next-auth": "~4.10.2",
     "react": "18.2.0",
