--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^5.0.0",
+    "react-select": "^5.4.0",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
